# iai_outdoor_models

./: .gitignore  CMakeLists.txt  README.md  package.xml
blend/: broad-leaved-tree.blend  conifer.blend  outdoor_mesh_collection.blend
launch/: upload_model.launch
models/area_highlights/: Stone_danger.stl  av_bottom_area.stl  av_mast.stl  av_top.stl  broad_leaved_area.stl  close_to_lodge.stl  mixed_trees_area.stl  needle_area.stl
models/avalanche_victim/: model.config  victim.dae  victim.sdf
models/bench/: bench.dae  bench.sdf  bench.stl  model.config
models/bench_broken/: bench_broken.dae  bench_broken.sdf  bench_broken.stl  model.config
models/broad_leaved_tree/: broad_leaved_tree_leaves.dae  broad_leaved_tree_leaves.stl  broad_leaved_tree_trunk.dae  broad_leaved_tree_trunk.stl  model.config  tree.sdf  tree_branches.sdf
models/cabin/: cabin.dae  cabin.sdf  cabin.stl  model.config
models/cabin_broken/: cabin_broken.dae  cabin_broken.sdf  cabin_broken.stl  model.config
models/conifer/: conifer.sdf  conifer_branches.dae  conifer_branches.stl  conifer_trunk.dae  conifer_trunk.stl  model.config
models/glove/: glasses.dae  glove.dae  glove.sdf  hat.dae
models/hat/: hat.sdf  model.config
models/iai_rescue_quadrotor/: .directory  CMakeLists.txt  package.xml
models/lost_victim/: victim.dae  victim.sdf
models/pylon/: Pylon.dae  model.config  pylon.sdf  pylon.stl  pylon.urdf
models/pylon_broken/: model.config  pylon_broken.dae  pylon_broken.sdf  (+2 more)
urdf/: avalanche_victim.xacro  bench.xacro  bench_broken.xacro  bridge.xacro  broad_leaved_tree.xacro  broad_leved_tree.urdf  cabin.urdf  cabin.xacro  cabin_broken.urdf  cabin_broken.xacro  conifer.urdf  conifer.xacro  iai_outdoor_models.xacro  lost_victim.xacro  pylon.urdf  pylon.xacro  pylon_broken.urdf  pylon_broken.xacro  rock.urdf  rock.xacro  shoe.xacro  skis.xacro
(+23 files in other folders)
