<?xml version="1.0"?>

<package>
  <name>iai_outdoor_models</name>
  <version>0.0.0</version>
  <description>This RosPackage contains CAD models for environments. These models can be used for visualization and reasoning in different packages. The directory structure is meant to work with gazebo/openEASE(knowrob_vis) and CRAM-Physics
</description>
  <maintainer email="bbrieber@cs.informatik.uni-bremen.de">Benjamin Brieber</maintainer>
  <author email="bbrieber@cs.informatik.uni-bremen.de">Benjamin Brieber</author>

  <license>GPL</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <!--
  <build_depend>iai_rescue_simulation_msgs</build_depend>
  <run_depend>iai_rescue_simulation_msgs</run_depend>
  -->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>


  <export>
    <gazebo_ros 
		plugin_path="${prefix}/lib" 
                gazebo_plugin_path="${prefix}/lib:../${prefix}/lib" 
		gazebo_media_path="${prefix}/resource" 
		gazebo_resource_path="${prefix}:${prefix}/resource" 
		gazebo_model_path="${prefix}/models" />
  </export>
</package>
